--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "@types/react": "^17.0.18",
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.1.8",
+    "d3-dag": "^0.8.2",
     "d3-fetch": "^3.0.1",
     "lodash": "^4.17.21",
+    "query-string": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.3.5",
