--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0-alpha1",
   "license": "MIT",
   "private": true,
+  "proxy": "http://www.ebi.ac.uk/ols/api/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
