--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-router-dom": "^5.1.8",
     "d3-dag": "^0.8.2",
     "d3-fetch": "^3.0.1",
+    "d3-force": "^3.0.0",
     "lodash": "^4.17.21",
     "query-string": "^7.0.1",
     "react": "^17.0.2",
