--- a/package.json
+++ b/package.json
@@ -51,5 +51,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/d3-force": "^3.0.3"
   }
 }
