--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "^17.0.18",
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.1.8",
+    "@types/d3-force": "^3.0.3",
     "d3-dag": "^0.8.2",
     "d3-fetch": "^3.0.1",
     "d3-force": "^3.0.0",
@@ -51,8 +52,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@types/d3-force": "^3.0.3"
   }
 }
