--- a/package.json
+++ b/package.json
@@ -5,21 +5,10 @@
   "private": true,
   "proxy": "http://www.ebi.ac.uk/ols/api/",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
-    "@types/d3-fetch": "^3.0.1",
-    "@types/d3-force": "^3.0.3",
-    "@types/d3-selection": "^3.0.1",
-    "@types/jest": "^26.0.24",
-    "@types/lodash": "^4.14.172",
-    "@types/node": "^12.20.19",
-    "@types/react": "^17.0.18",
-    "@types/react-dom": "^17.0.9",
-    "@types/react-router-dom": "^5.1.8",
     "d3-dag": "^0.8.2",
     "d3-fetch": "^3.0.1",
     "d3-force": "^3.0.0",
+    "d3-polygon": "^3.0.1",
     "d3-selection": "^3.0.0",
     "lodash": "^4.17.21",
     "query-string": "^7.0.1",
@@ -54,5 +43,20 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^12.8.3",
+    "@types/d3-fetch": "^3.0.1",
+    "@types/d3-force": "^3.0.3",
+    "@types/d3-selection": "^3.0.1",
+    "@types/jest": "^26.0.24",
+    "@types/lodash": "^4.14.172",
+    "@types/node": "^12.20.19",
+    "@types/react": "^17.0.18",
+    "@types/react-dom": "^17.0.9",
+    "@types/react-router-dom": "^5.1.8",
+    "@types/d3-polygon": "^3.0.0"
   }
 }
