--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "private": true,
   "proxy": "http://www.ebi.ac.uk/ols/api/",
   "dependencies": {
+    "@types/d3-scale-chromatic": "^3.0.0",
     "d3-dag": "^0.8.2",
     "d3-fetch": "^3.0.1",
     "d3-force": "^3.0.0",
     "d3-polygon": "^3.0.1",
+    "d3-scale-chromatic": "^3.0.0",
     "d3-selection": "^3.0.0",
+    "d3-shape": "^3.0.1",
     "lodash": "^4.17.21",
     "query-string": "^7.0.1",
     "react": "^17.0.2",
@@ -50,13 +53,14 @@
     "@testing-library/user-event": "^12.8.3",
     "@types/d3-fetch": "^3.0.1",
     "@types/d3-force": "^3.0.3",
+    "@types/d3-polygon": "^3.0.0",
     "@types/d3-selection": "^3.0.1",
+    "@types/d3-shape": "^3.0.2",
     "@types/jest": "^26.0.24",
     "@types/lodash": "^4.14.172",
     "@types/node": "^12.20.19",
     "@types/react": "^17.0.18",
     "@types/react-dom": "^17.0.9",
-    "@types/react-router-dom": "^5.1.8",
-    "@types/d3-polygon": "^3.0.0"
+    "@types/react-router-dom": "^5.1.8"
   }
 }
