--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
   "proxy": "http://www.ebi.ac.uk/ols/api/",
   "dependencies": {
     "@types/d3-scale-chromatic": "^3.0.0",
+    "@types/three": "^0.133.0",
+    "3d-force-graph": "^1.70.5",
     "d3-dag": "^0.8.2",
     "d3-fetch": "^3.0.1",
     "d3-force": "^3.0.0",
+    "d3-force-3d": "^3.0.2",
     "d3-polygon": "^3.0.1",
     "d3-scale-chromatic": "^3.0.0",
     "d3-selection": "^3.0.0",
@@ -20,6 +23,7 @@
     "react-helmet": "^6.1.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "three-spritetext": "^1.6.3",
     "typescript": "^4.3.5",
     "web-vitals": "^1.1.2"
   },
