--- a/package.json
+++ b/package.json
@@ -5,14 +5,17 @@
   "private": true,
   "proxy": "http://www.ebi.ac.uk/ols/api/",
   "dependencies": {
+    "3d-force-graph": "^1.70.5",
+    "@blueprintjs/core": "^3.51.2",
     "@types/d3-scale-chromatic": "^3.0.0",
     "@types/three": "^0.133.0",
-    "3d-force-graph": "^1.70.5",
+    "d3-color": "^3.0.1",
     "d3-dag": "^0.8.2",
     "d3-fetch": "^3.0.1",
     "d3-force": "^3.0.0",
     "d3-force-3d": "^3.0.2",
     "d3-polygon": "^3.0.1",
+    "d3-scale": "^4.0.2",
     "d3-scale-chromatic": "^3.0.0",
     "d3-selection": "^3.0.0",
     "d3-shape": "^3.0.1",
@@ -20,6 +23,7 @@
     "query-string": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-easy-emoji": "^1.6.1",
     "react-helmet": "^6.1.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
@@ -55,9 +59,11 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@types/d3-color": "^3.0.2",
     "@types/d3-fetch": "^3.0.1",
     "@types/d3-force": "^3.0.3",
     "@types/d3-polygon": "^3.0.0",
+    "@types/d3-scale": "^4.0.2",
     "@types/d3-selection": "^3.0.1",
     "@types/d3-shape": "^3.0.2",
     "@types/jest": "^26.0.24",
@@ -65,6 +71,7 @@
     "@types/node": "^12.20.19",
     "@types/react": "^17.0.18",
     "@types/react-dom": "^17.0.9",
+    "@types/react-helmet": "^6.1.4",
     "@types/react-router-dom": "^5.1.8"
   }
 }
