--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "private": true,
   "proxy": "http://www.ebi.ac.uk/ols/api/",
   "dependencies": {
-    "3d-force-graph": "^1.70.5",
     "@blueprintjs/core": "^3.51.2",
+    "@blueprintjs/select": "^3.18.10",
     "@types/three": "^0.133.0",
+    "3d-force-graph": "^1.70.5",
     "d3-color": "^3.0.1",
     "d3-dag": "^0.8.2",
     "d3-fetch": "^3.0.1",
