--- a/package.json
+++ b/package.json
@@ -4,31 +4,30 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "@blueprintjs/core": "^3.51.2",
-    "@blueprintjs/select": "^3.18.10",
-    "@types/three": "^0.133.0",
-    "3d-force-graph": "^1.70.5",
-    "d3-color": "^3.0.1",
-    "d3-dag": "^0.8.2",
+    "@blueprintjs/core": "^4.1.2",
+    "@blueprintjs/select": "^4.1.2",
+    "3d-force-graph": "^1.70.10",
+    "d3-color": "^3.1.0",
+    "d3-dag": "^0.11.3",
     "d3-fetch": "^3.0.1",
     "d3-force": "^3.0.0",
-    "d3-force-3d": "^3.0.2",
+    "d3-force-3d": "^3.0.3",
     "d3-polygon": "^3.0.1",
     "d3-scale": "^4.0.2",
     "d3-scale-chromatic": "^3.0.0",
     "d3-selection": "^3.0.0",
-    "d3-shape": "^3.0.1",
+    "d3-shape": "^3.1.0",
     "lodash": "^4.17.21",
-    "query-string": "^7.0.1",
+    "query-string": "^7.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-easy-emoji": "^1.6.1",
     "react-helmet": "^6.1.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
-    "three-spritetext": "^1.6.3",
-    "typescript": "^4.3.5",
-    "web-vitals": "^1.1.2"
+    "three-spritetext": "^1.6.5",
+    "typescript": "^4.6.3",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -55,7 +54,7 @@
     ]
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "@types/d3-color": "^3.0.2",
@@ -64,14 +63,15 @@
     "@types/d3-polygon": "^3.0.0",
     "@types/d3-scale": "^4.0.2",
     "@types/d3-scale-chromatic": "^3.0.0",
-    "@types/d3-selection": "^3.0.1",
+    "@types/d3-selection": "^3.0.2",
     "@types/d3-shape": "^3.0.2",
-    "@types/jest": "^26.0.24",
-    "@types/lodash": "^4.14.172",
-    "@types/node": "^12.20.19",
-    "@types/react": "^17.0.18",
-    "@types/react-dom": "^17.0.9",
-    "@types/react-helmet": "^6.1.4",
-    "@types/react-router-dom": "^5.1.8"
+    "@types/jest": "^27.4.1",
+    "@types/lodash": "^4.14.181",
+    "@types/node": "^12.20.47",
+    "@types/react": "^17.0.44",
+    "@types/react-dom": "^17.0.15",
+    "@types/react-helmet": "^6.1.5",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/three": "^0.139.0"
   }
 }
