--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "react-dom": "^17.0.2",
     "react-easy-emoji": "^1.6.1",
     "react-helmet": "^6.1.0",
-    "react-router-dom": "^5.3.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.3",
     "three-spritetext": "^1.6.5",
     "typescript": "^4.6.3",
@@ -73,5 +73,8 @@
     "@types/react-helmet": "^6.1.5",
     "@types/react-router-dom": "^5.3.3",
     "@types/three": "^0.139.0"
+  },
+  "prettier": {
+    "printWidth": 120
   }
 }
