--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "@blueprintjs/core": "^4.1.2",
-    "@blueprintjs/select": "^4.1.2",
+    "@blueprintjs/core": "^4.2.0",
+    "@blueprintjs/select": "^4.1.3",
+    "@craco/craco": "^6.4.3",
     "3d-force-graph": "^1.70.10",
     "d3-color": "^3.1.0",
     "d3-dag": "^0.11.3",
@@ -17,22 +18,24 @@
     "d3-scale-chromatic": "^3.0.0",
     "d3-selection": "^3.0.0",
     "d3-shape": "^3.1.0",
+    "fs": "^0.0.1-security",
     "lodash": "^4.17.21",
+    "process": "^0.11.10",
     "query-string": "^7.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-easy-emoji": "^1.6.1",
     "react-helmet": "^6.1.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "three-spritetext": "^1.6.5",
     "typescript": "^4.6.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
