--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "client",
-  "version": "0.0.0-alpha1",
+  "version": "0.0.0-alpha.2",
   "license": "MIT",
   "private": true,
   "dependencies": {
     "@blueprintjs/core": "^4.2.0",
     "@blueprintjs/select": "^4.1.3",
-    "@craco/craco": "^6.4.3",
+    "@craco/craco": "^7.0.0-alpha.3",
     "3d-force-graph": "^1.70.10",
     "d3-color": "^3.1.0",
     "d3-dag": "^0.11.3",
