--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@blueprintjs/core": "^4.2.0",
     "@blueprintjs/select": "^4.1.3",
     "@craco/craco": "^7.0.0-alpha.3",
+    "@react-hook/window-size": "^3.0.7",
     "3d-force-graph": "^1.70.10",
     "d3-color": "^3.1.0",
     "d3-dag": "^0.11.3",
