--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "@blueprintjs/core": "^4.2.0",
+    "@blueprintjs/popover2": "^1.1.4",
     "@blueprintjs/select": "^4.1.3",
     "@craco/craco": "^7.0.0-alpha.3",
     "@react-hook/window-size": "^3.0.7",
