--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "d3-shape": "^3.1.0",
     "fs": "^0.0.1-security",
     "lodash": "^4.17.21",
+    "memoize-one": "^6.0.0",
     "process": "^0.11.10",
     "query-string": "^7.1.1",
     "react": "^17.0.2",
