update top level cname

--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
 # Environment variables for the "prod" (production) environment build.
 # Remember, these will be embedded inside the JS bundle, so don't put
 # anything secret here.
-PUBLIC_URL=https://d21xoi40pc9qfm.cloudfront.net/ontology-ui
+PUBLIC_URL=https://labs.cellxgene.cziscience.com/ontology-ui
