--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "3d-force-graph": "^1.70.10",
     "d3-color": "^3.1.0",
     "d3-dag": "^0.11.3",
+    "d3-dsv": "^3.0.1",
     "d3-fetch": "^3.0.1",
     "d3-force": "^3.0.0",
     "d3-force-3d": "^3.0.3",
@@ -29,9 +30,11 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-easy-emoji": "^1.6.1",
+    "react-error-boundary": "^3.1.4",
     "react-helmet-async": "^1.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
+    "recoil": "^0.7.4",
     "three-spritetext": "^1.6.5",
     "typescript": "^4.6.3",
     "web-vitals": "^2.1.4"
@@ -74,7 +77,7 @@
     "@types/d3-shape": "^3.0.2",
     "@types/jest": "^27.4.1",
     "@types/lodash": "^4.14.181",
-    "@types/node": "^12.20.47",
+    "@types/node": "^12.20.55",
     "@types/react": "^17.0.44",
     "@types/react-dom": "^17.0.15",
     "@types/react-helmet": "^6.1.5",
