--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@craco/craco": "^7.0.0-alpha.3",
     "@react-hook/window-size": "^3.0.7",
     "3d-force-graph": "^1.70.10",
+    "d3-array": "^3.2.0",
     "d3-color": "^3.1.0",
     "d3-dag": "^0.11.3",
     "d3-dsv": "^3.0.1",
@@ -67,6 +68,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@types/d3-array": "^3.0.3",
     "@types/d3-color": "^3.0.2",
     "@types/d3-fetch": "^3.0.1",
     "@types/d3-force": "^3.0.3",
