--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "recoil": "^0.7.4",
+    "recoil-sync": "^0.1.1",
     "three-spritetext": "^1.6.5",
     "typescript": "^4.8.2",
     "web-vitals": "^2.1.4"
