--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "recoil": "^0.7.4",
     "three-spritetext": "^1.6.5",
     "typescript": "^4.8.2",
+    "umap-js": "^1.3.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
