--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "fs": "^0.0.1-security",
     "lodash": "^4.17.21",
     "memoize-one": "^6.0.0",
+    "ml-pca": "^4.0.2",
     "process": "^0.11.10",
     "query-string": "^7.1.1",
     "react": "^17.0.2",
