--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "fs": "^0.0.1-security",
     "lodash": "^4.17.21",
     "memoize-one": "^6.0.0",
+    "ml-pca": "^4.0.2",
     "process": "^0.11.10",
     "query-string": "^7.1.1",
     "react": "^17.0.2",
@@ -38,6 +39,7 @@
     "recoil": "^0.7.4",
     "three-spritetext": "^1.6.5",
     "typescript": "^4.8.2",
+    "umap-js": "^1.3.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
