add plausible analytics

--- a/.env.production
+++ b/.env.production
@@ -2,3 +2,4 @@
 # Remember, these will be embedded inside the JS bundle, so don't put
 # anything secret here.
 PUBLIC_URL=https://labs.cellxgene.cziscience.com/ontology-ui
+PLAUSIBLE_DATA_DOMAIN=https://cellxgene.cziscience.com
