--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     ports:
       - "3000:3000"
     volumes:
-      - ./frontend:/app
+      - ./:/app
   backend:
     build:
       context: ./server
@@ -15,4 +15,4 @@ services:
     ports:
       - "5000:5000"
     volumes:
-      - ./backend:/app
+      - ./:/app
