--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -11,6 +11,8 @@ certifi==2022.12.7
 charset-normalizer==2.1.1
 contourpy==1.0.7
 cycler==0.11.0
+Flask==2.2.2
+Flask-Cors==3.0.10
 fonttools==4.38.0
 frozenlist==1.3.3
 fsspec==2023.1.0
