--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "@blueprintjs/core": "^4.2.0",
     "@blueprintjs/popover2": "^1.1.4",
     "@blueprintjs/select": "^4.1.3",
-    "@craco/craco": "^7.0.0-alpha.3",
     "@react-hook/window-size": "^3.0.7",
     "3d-force-graph": "^1.70.10",
     "d3-array": "^3.2.0",
@@ -31,22 +30,26 @@
     "query-string": "^7.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-easy-emoji": "^1.6.1",
     "react-error-boundary": "^3.1.4",
     "react-helmet-async": "^1.3.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "^5.0.1",
     "recoil": "^0.7.4",
+    "rollup-plugin-node-builtins": "^2.1.2",
     "three-spritetext": "^1.6.5",
     "typescript": "^4.8.2",
     "umap-js": "^1.3.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "craco start",
-    "build": "craco build",
-    "test": "craco test",
-    "eject": "react-scripts eject"
+    "start": "vite",
+    "build": "tsc && vite build"
+  },
+  "browser": {
+    "fs": false,
+    "path": false,
+    "os": false,
+    "net": false,
+    "tls": false
   },
   "eslintConfig": {
     "extends": [
@@ -81,13 +84,17 @@
     "@types/d3-shape": "^3.0.2",
     "@types/jest": "^27.4.1",
     "@types/lodash": "^4.14.181",
-    "@types/node": "^12.20.55",
+    "@types/node": "^18.11.18",
     "@types/react": "^17.0.44",
     "@types/react-dom": "^17.0.15",
     "@types/react-helmet": "^6.1.5",
     "@types/react-router-dom": "^5.3.3",
     "@types/three": "^0.139.0",
-    "env-cmd": "^10.1.0"
+    "@vitejs/plugin-react": "^3.0.0",
+    "env-cmd": "^10.1.0",
+    "vite": "^4.0.4",
+    "vite-plugin-svgr": "^2.4.0",
+    "vite-tsconfig-paths": "^4.0.3"
   },
   "prettier": {
     "printWidth": 120
