--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -6,13 +6,11 @@ anndata==0.8.0
 async-timeout==4.0.2
 attrs==22.2.0
 botocore==1.27.59
-cell-census==0.3.0
+cell-census==0.8.0
 certifi==2022.12.7
 charset-normalizer==2.1.1
 contourpy==1.0.7
 cycler==0.11.0
-Flask==2.2.2
-Flask-Cors==3.0.10
 fonttools==4.38.0
 frozenlist==1.3.3
 fsspec==2023.1.0
@@ -40,19 +38,19 @@ python-dateutil==2.8.2
 pytz==2022.7.1
 requests==2.28.2
 s3fs==2023.1.0
-scanpy==1.9.1
+scanpy==1.9.2
 scikit-learn==1.2.1
 scikit-misc==0.1.4
 scipy==1.10.0
 seaborn==0.12.2
 session-info==1.0.0
 six==1.16.0
-somacore==0.0.0a8
+somacore==1.0.0rc3
 statsmodels==0.13.5
 stdlib-list==0.8.0
 threadpoolctl==3.1.0
 tiledb==0.20.0
-tiledbsoma==0.5.0a8
+tiledbsoma==1.0.0rc2
 tqdm==4.64.1
 typing-extensions==4.4.0
 umap-learn==0.5.3
