--- a/.happy/config.json
+++ b/.happy/config.json
@@ -2,7 +2,7 @@
     "config_version": "v2",
     "terraform_version": "1.3.0",
     "default_env": "rdev",
-    "app": "jheath",
+    "app": "ontology-ui",
     "default_compose_env_file": ".env.ecr",
     "slice_default_tag": "branch-main",
     "services": [
@@ -11,22 +11,48 @@
     ],
     "environments": {
         "rdev": {
-            "aws_profile": "czi-playground",
-            "secret_arn": "happy/env-jheath-rdev-config",
+            "aws_profile": "single-cell-dev",
             "terraform_directory": ".happy/terraform/envs/rdev",
-            "log_group_prefix": "/happy/jheath/rdev",
-            "auto_run_migrations": true,
+            "log_group_prefix": "/happy/cellxgene-labs/rdev",
             "task_launch_type": "k8s",
             "k8s": {
-                "namespace": "jheath-rdev-happy-happy-env",
-                "cluster_id": "jheath-rdev-eks",
+                "namespace": "sc-dev-happy-eks-happy-env",
+                "cluster_id": "sc-dev-eks",
                 "auth_method": "eks",
-                "context": "jheath-rdev-eks"
+                "context": "sc-dev-eks"
+            }
+        },
+        "staging": {
+            "aws_profile": "single-cell-dev",
+            "terraform_directory": ".happy/terraform/envs/staging",
+            "log_group_prefix": "/happy/cellxgene-labs/staging",
+            "task_launch_type": "k8s",
+            "k8s": {
+                "namespace": "sc-staging-happy-eks-happy-env",
+                "cluster_id": "sc-staging-eks",
+                "auth_method": "eks",
+                "context": "sc-staging-eks"
+            }
+        },
+        "prod": {
+            "aws_profile": "single-cell-prod",
+            "terraform_directory": ".happy/terraform/envs/prod",
+            "log_group_prefix": "/happy/cellxgene-labs/prod",
+            "task_launch_type": "k8s",
+            "k8s": {
+                "namespace": "sc-prod-happy-eks-happy-env",
+                "cluster_id": "sc-prod-eks",
+                "auth_method": "eks",
+                "context": "sc-prod-eks"
             }
         }
     },
     "tasks": {
         "migrate": [],
         "delete": []
+    },
+    "features": {
+        "enable_happy_api_usage": true,
+        "enable_ecr_auto_creation": true
     }
 }
