--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.8"
 services:
   frontend:
     image: 401986845158.dkr.ecr.us-west-2.amazonaws.com/frontend
-    platform: linux/amd64
+    platform: linux/arm64
     build:
       context: ./
       dockerfile: Dockerfile
@@ -10,7 +10,7 @@ services:
       - "3000:3000"
   backend:
     image: 401986845158.dkr.ecr.us-west-2.amazonaws.com/backend
-    platform: linux/amd64
+    platform: linux/arm64
     build:
       context: ./server
       dockerfile: Dockerfile
